<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    app:cardCornerRadius="2dp">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:contentDescription="@string/electro_icon"
        tools:src="@drawable/ic_electro_copy" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:text="@string/electricity"
        android:textColor="@color/title_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/serial_number_icon"
        android:src="@drawable/ic_serial_number" />

    <TextView
        android:id="@+id/serialNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginTop="49dp"
        android:text="@string/serial_number"
        android:textColor="@color/serial_number_color"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/info_button_icon"
        android:src="@drawable/ic_info" />

    <ImageButton
        android:id="@+id/contextMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/info_button_icon"
        android:src="@drawable/ic_context_menu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp">

        <EditText
            android:id="@+id/day"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="64dp"
            android:hint="@string/hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/night"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/night"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="64dp"
            android:hint="@string/hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/peak"
            app:layout_constraintStart_toEndOf="@+id/day"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/peak"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="64dp"
            android:hint="@string/hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/send"
            app:layout_constraintStart_toEndOf="@id/night"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="70dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/info_button_icon"
            android:src="@drawable/ic_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="21dp"
            android:text="@string/electro_description"
            android:textColor="@color/title_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            app:layout_constraintBottom_toTopOf="@id/day"
            app:layout_constraintStart_toStartOf="@id/day" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/night"
            app:layout_constraintBottom_toTopOf="@id/night"
            app:layout_constraintStart_toStartOf="@id/night" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            app:layout_constraintBottom_toTopOf="@id/peak"
            app:layout_constraintStart_toStartOf="@id/peak" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>